--- a/BCSH2_semestralka/MainWindow.xaml
+++ b/BCSH2_semestralka/MainWindow.xaml
@@ -2,36 +2,60 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BTEJA_BCSH2_semestralka"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:avalon="http://icsharpcode.net/sharpdevelop/avalonedit" 
+        xmlns:viewmodel="clr-namespace:IdeSK.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:InterpreterViewModel}"
         mc:Ignorable="d"
-        Title="SubKotlin IDE" 
+        Title="SubKotlin IDE"
         Height="450" Width="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_File">
+                <MenuItem Header="_Load" />
+                <MenuItem Header="_Save" />
+            </MenuItem>
+            <MenuItem Header="_Help">
+                <MenuItem Header="_Grammar" />
+                <MenuItem Header="_Library_Functions" />
+            </MenuItem>
+        </Menu>
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0">Code Editor</Label>
-        <TextBox x:Name="textBox_editor" Grid.Row="1" Grid.Column="0"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
-        <StackPanel x:Name="stackPanel_centralButtons" Grid.Row="1" Grid.Column="1">
-            <Button Click="ClickDebug">Debug</Button>
-            <Button Click="ClickInterpret" Margin="0,5,0,25">Interpret</Button>
-            <Button Click="ClickLoad">Load</Button>
-            <Button Click="ClickSave">Save</Button>
-        </StackPanel>
+            <Label Grid.Row="0" Grid.Column="0">Code Editor</Label>
+            <TextBox x:Name="textBox_editor" Grid.Row="1" Grid.Column="0"/>
+            <!--
+            <avalon:TextEditor x:Name="textBox_editor" ShowLineNumbers="True"
+                               Grid.Row="1" Grid.Column="0" Margin="10,10,10,10"/>
+            -->
+            
+            <StackPanel x:Name="stackPanel_centralButtons" Grid.Row="1" Grid.Column="1">
+                <Button x:Name="button_build" 
+                        Content="Build" 
+                        Command="{Binding BuildCommand}" 
+                        CommandParameter="{Binding ElementName=textBox_editor, Path=Text}" />
+                <Button x:Name="button_interpret" 
+                        Content="Interpret" 
+                        Command="{Binding InterpretCommand}" 
+                        CommandParameter="{Binding ElementName=textBox_editor, Path=Text}"/>
+            </StackPanel>
 
-        <Label Grid.Row="0" Grid.Column="2">Console</Label>
-        <TextBox x:Name="textBox_console" Grid.Row="1" Grid.Column="2" Background="#FF595959" Foreground="AntiqueWhite"/>
-    </Grid>
+            <Label Grid.Row="0" Grid.Column="2">Console</Label>
+            <TextBox x:Name="textBox_console" Grid.Row="1" Grid.Column="2" 
+                     Background="#FF595959" Foreground="AntiqueWhite" IsReadOnly="True"
+                     Text="{Binding Path=ConsoleOutput}"/>
+        </Grid>
+    </DockPanel>
 
     <Window.Resources>
         <Style TargetType="Grid">
