--- a/BCSH2_semestralka/View/InputDialog.xaml
+++ b/BCSH2_semestralka/View/InputDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="IdeSK.View.InputWindow"
+﻿<Window x:Class="IdeSK.View.InputDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,10 +9,8 @@
         Title="Console Input" Height="125" Width="200">
     <StackPanel>
         <Label>Your input:</Label>
-        <TextBox  x:Name="textBox_input"/>
-        <Button Content="Insert"
-                Command="{Binding }"
-                CommandParameter="{Binding ElementName=textBox_input, Path=Text}"/>
+        <TextBox x:Name="textBox_input"/>
+        <Button Content="Insert" Click="ClickInsert"/>
     </StackPanel>
 
     <Window.Resources>
