--- a/BCSH2_semestralka/MainWindow.xaml
+++ b/BCSH2_semestralka/MainWindow.xaml
@@ -16,14 +16,14 @@
                 <MenuItem Header="_Save ..." Command="{Binding SaveCommand}"/>
                 <MenuItem Header="_Save As ..." Command="{Binding SaveAsCommand}"/>
             </MenuItem>
+            <MenuItem Header="_Settings">
+                <MenuItem Header="_Interpreter logs" Click="Click_SwitchShowLogs">
+                    <TextBlock>Show <CheckBox x:Name="checkBox_showLogs" IsChecked="{Binding ShowLogs}"/></TextBlock>
+                </MenuItem>
+            </MenuItem>
             <MenuItem Header="_Help">
                 <MenuItem Header="_Grammar ..." Command="{Binding ShowGrammarCommand}"/>
                 <MenuItem Header="_Library Functions ..." Command="{Binding ShowLibraryCommand}"/>
-            </MenuItem>
-            <MenuItem Header="_Settings">
-                <MenuItem Header="_Interpreter logs">
-                    <TextBlock>Show <CheckBox IsChecked="{Binding ShowLogs}" /></TextBlock>
-                </MenuItem>
             </MenuItem>
         </Menu>
 
